[gd_scene format=4 uid="uid://gq2387pha0go"]

[ext_resource type="Theme" uid="uid://n57051tya53w" path="res://hud/theme.tres" id="1_2piht"]
[ext_resource type="Texture2D" uid="uid://cqu7w6wupf2du" path="res://assets/images/wall.png" id="1_v0k86"]
[ext_resource type="Script" uid="uid://b35al1tovjr57" path="res://hud/main_menu/main_menu.gd" id="1_v370v"]
[ext_resource type="PackedScene" uid="uid://daiiabcomntiq" path="res://scenes/brick/brick.tscn" id="2_1cdh1"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1cdh1"]
texture = ExtResource("1_v0k86")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)

[sub_resource type="TileSet" id="TileSet_2piht"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 8
physics_layer_0/collision_mask = 0
sources/1 = SubResource("TileSetAtlasSource_1cdh1")

[sub_resource type="Curve2D" id="Curve2D_2piht"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -64, -64, 0, 0, 0, 0, 1088, -64, 0, 0, 0, 0, 1088, 1152, 0, 0, 0, 0, -64, 1152, 0, 0, 0, 0, -64, -64)
}
point_count = 5

[sub_resource type="Animation" id="Animation_qa22u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/StartLabel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(268, 476)]
}

[sub_resource type="Animation" id="Animation_v370v"]
resource_name = "Start"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/StartLabel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.75, 1, 1.33),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(268, 476), Vector2(268, 468), Vector2(268, 476)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kd0vy"]
_data = {
&"RESET": SubResource("Animation_qa22u"),
&"Start": SubResource("Animation_v370v")
}

[node name="MainMenu" type="Node" unique_id=1364903445]
script = ExtResource("1_v370v")
brick_scene = ExtResource("2_1cdh1")

[node name="Background" type="ColorRect" parent="." unique_id=810424304]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0627451, 0.047058824, 0.03137255, 1)

[node name="BackgroundBricks" type="Node" parent="." unique_id=1235408088]

[node name="Brick" parent="BackgroundBricks" unique_id=1879808055 instance=ExtResource("2_1cdh1")]
rotation = 0.5235988

[node name="Brick2" parent="BackgroundBricks" unique_id=1118331999 instance=ExtResource("2_1cdh1")]
rotation = -0.5235988

[node name="Brick3" parent="BackgroundBricks" unique_id=302648749 instance=ExtResource("2_1cdh1")]
rotation = 2.3561945

[node name="Brick4" parent="BackgroundBricks" unique_id=2146870058 instance=ExtResource("2_1cdh1")]
rotation = -1.3089969

[node name="UI" type="CanvasLayer" parent="." unique_id=44409394]

[node name="StartLabel" type="Label" parent="UI" unique_id=872213110]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -244.0
offset_top = -36.0
offset_right = 244.0
offset_bottom = 36.000427
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_2piht")
theme_override_colors/font_color = Color(0.92156863, 0.92156863, 0.827451, 1)
text = "SPACE TO START"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InstructionsLabel" type="Label" parent="UI" unique_id=2040474192]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -336.0
offset_top = 152.0
offset_right = 336.0
offset_bottom = 263.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_2piht")
theme_override_colors/font_color = Color(0.92156863, 0.92156863, 0.827451, 1)
theme_override_font_sizes/font_size = 48
text = "A / D OR ARROWS TO MOVE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScoreLabel" type="Label" parent="UI" unique_id=1788320193]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -16.0
offset_top = -208.0
offset_right = 24.0
offset_bottom = -136.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_2piht")
theme_override_colors/font_color = Color(0.92156863, 0.92156863, 0.827451, 1)
theme_override_font_sizes/font_size = 48

[node name="Bricks" type="Node" parent="." unique_id=2073976130]

[node name="K" parent="Bricks" unique_id=941284316 instance=ExtResource("2_1cdh1")]
position = Vector2(149, 216)
letter = "K"
size = 1

[node name="E" parent="Bricks" unique_id=1900603331 instance=ExtResource("2_1cdh1")]
position = Vector2(237, 208)
letter = "E"
size = 1

[node name="Y" parent="Bricks" unique_id=1561108659 instance=ExtResource("2_1cdh1")]
position = Vector2(333, 216)
letter = "Y"
size = 1

[node name="B" parent="Bricks" unique_id=1055727377 instance=ExtResource("2_1cdh1")]
position = Vector2(420, 208)
letter = "B"
difficulty = 2
size = 1

[node name="R" parent="Bricks" unique_id=728204436 instance=ExtResource("2_1cdh1")]
position = Vector2(507, 216)
letter = "R"
difficulty = 1
size = 1

[node name="I" parent="Bricks" unique_id=1272723503 instance=ExtResource("2_1cdh1")]
position = Vector2(597, 208)
letter = "I"
difficulty = 2
size = 1

[node name="C" parent="Bricks" unique_id=2082698075 instance=ExtResource("2_1cdh1")]
position = Vector2(685, 216)
letter = "C"
difficulty = 1
size = 1

[node name="K2" parent="Bricks" unique_id=1976967078 instance=ExtResource("2_1cdh1")]
position = Vector2(773, 208)
letter = "K"
difficulty = 2
size = 1

[node name="S" parent="Bricks" unique_id=1599529056 instance=ExtResource("2_1cdh1")]
position = Vector2(869, 216)
letter = "S"
difficulty = 1
size = 1

[node name="TileMapLayer" type="TileMapLayer" parent="." unique_id=673825261]
modulate = Color(0.75, 0.75, 0.75, 1)
tile_map_data = PackedByteArray("AAAfAAAAAQAAAAAAAAAeAAAAAQAAAAAAAAAdAAAAAQAAAAAAAAAcAAAAAQAAAAAAAAAbAAAAAQAAAAAAAAAaAAAAAQAAAAAAAAAZAAAAAQAAAAAAAAAYAAAAAQAAAAAAAAAXAAAAAQAAAAAAAAAWAAAAAQAAAAAAAAAVAAAAAQAAAAAAAAAUAAAAAQAAAAAAAAATAAAAAQAAAAAAAAASAAAAAQAAAAAAAAARAAAAAQAAAAAAAAAQAAAAAQAAAAAAAAAPAAAAAQAAAAAAAAAOAAAAAQAAAAAAAAANAAAAAQAAAAAAAAAMAAAAAQAAAAAAAAALAAAAAQAAAAAAAAAKAAAAAQAAAAAAAAAJAAAAAQAAAAAAAAAIAAAAAQAAAAAAAAAHAAAAAQAAAAAAAAAGAAAAAQAAAAAAAAAFAAAAAQAAAAAAAAAEAAAAAQAAAAAAAAADAAAAAQAAAAAAAAACAAAAAQAAAAAAAAABAAAAAQAAAAAAAAAAAAAAAQAAAAAAAAAAAAEAAQAAAAAAAAAAAAIAAQAAAAAAAAAAAAMAAQAAAAAAAAAAAAQAAQAAAAAAAAAAAAUAAQAAAAAAAAAAAAYAAQAAAAAAAAAAAAcAAQAAAAAAAAAAAAgAAQAAAAAAAAAAAAkAAQAAAAAAAAAAAAoAAQAAAAAAAAAAAAsAAQAAAAAAAAAAAAwAAQAAAAAAAAAAAA0AAQAAAAAAAAAAAA4AAQAAAAAAAAAAAA8AAQAAAAAAAAAAABAAAQAAAAAAAAAAABEAAQAAAAAAAAAAABIAAQAAAAAAAAAAABMAAQAAAAAAAAAAABQAAQAAAAAAAAAAABUAAQAAAAAAAAAAABYAAQAAAAAAAAAAABcAAQAAAAAAAAAAABgAAQAAAAAAAAAAABkAAQAAAAAAAAAAABoAAQAAAAAAAAAAABsAAQAAAAAAAAAAABwAAQAAAAAAAAAAAB0AAQAAAAAAAAAAAB4AAQAAAAAAAAAAAB8AAQAAAAAAAAABAAIAAQAAAAAAAAABAAEAAQAAAAAAAAACAAEAAQAAAAAAAAACAAIAAQAAAAAAAAADAAIAAQAAAAAAAAADAAEAAQAAAAAAAAAEAAEAAQAAAAAAAAAEAAIAAQAAAAAAAAAFAAIAAQAAAAAAAAAFAAEAAQAAAAAAAAAGAAEAAQAAAAAAAAAGAAIAAQAAAAAAAAAHAAIAAQAAAAAAAAAHAAEAAQAAAAAAAAAIAAEAAQAAAAAAAAAIAAIAAQAAAAAAAAAJAAIAAQAAAAAAAAAJAAEAAQAAAAAAAAAKAAEAAQAAAAAAAAAKAAIAAQAAAAAAAAALAAIAAQAAAAAAAAALAAEAAQAAAAAAAAAMAAEAAQAAAAAAAAAMAAIAAQAAAAAAAAANAAIAAQAAAAAAAAANAAEAAQAAAAAAAAAOAAEAAQAAAAAAAAAOAAIAAQAAAAAAAAAPAAIAAQAAAAAAAAAPAAEAAQAAAAAAAAAQAAEAAQAAAAAAAAAQAAIAAQAAAAAAAAARAAIAAQAAAAAAAAARAAEAAQAAAAAAAAASAAEAAQAAAAAAAAASAAIAAQAAAAAAAAATAAIAAQAAAAAAAAATAAEAAQAAAAAAAAAUAAEAAQAAAAAAAAAUAAIAAQAAAAAAAAAVAAIAAQAAAAAAAAAVAAEAAQAAAAAAAAAWAAEAAQAAAAAAAAAWAAIAAQAAAAAAAAAXAAIAAQAAAAAAAAAXAAEAAQAAAAAAAAAYAAEAAQAAAAAAAAAYAAIAAQAAAAAAAAAZAAIAAQAAAAAAAAAZAAEAAQAAAAAAAAAaAAEAAQAAAAAAAAAaAAIAAQAAAAAAAAAbAAIAAQAAAAAAAAAbAAEAAQAAAAAAAAAcAAEAAQAAAAAAAAAcAAIAAQAAAAAAAAAdAAIAAQAAAAAAAAAdAAEAAQAAAAAAAAAeAAEAAQAAAAAAAAAeAAIAAQAAAAAAAAAfAAIAAQAAAAAAAAAfAAEAAQAAAAAAAAAfAAMAAQAAAAAAAAAfAAQAAQAAAAAAAAAfAAUAAQAAAAAAAAAfAAYAAQAAAAAAAAAfAAcAAQAAAAAAAAAfAAgAAQAAAAAAAAAfAAkAAQAAAAAAAAAfAAoAAQAAAAAAAAAfAAsAAQAAAAAAAAAfAAwAAQAAAAAAAAAfAA0AAQAAAAAAAAAfAA4AAQAAAAAAAAAfAA8AAQAAAAAAAAAfABAAAQAAAAAAAAAfABEAAQAAAAAAAAAfABIAAQAAAAAAAAAfABMAAQAAAAAAAAAfABQAAQAAAAAAAAAfABUAAQAAAAAAAAAfABYAAQAAAAAAAAAfABcAAQAAAAAAAAAfABgAAQAAAAAAAAAfABkAAQAAAAAAAAAfABoAAQAAAAAAAAAfABsAAQAAAAAAAAAfABwAAQAAAAAAAAAfAB0AAQAAAAAAAAAfAB4AAQAAAAAAAAAfAB8AAQAAAAAAAAD//wAAAQAAAAAAAAD//wEAAQAAAAAAAAD//wIAAQAAAAAAAAD//wMAAQAAAAAAAAD//wQAAQAAAAAAAAD//wUAAQAAAAAAAAD//wYAAQAAAAAAAAD//wcAAQAAAAAAAAD//wgAAQAAAAAAAAD//wkAAQAAAAAAAAD//woAAQAAAAAAAAD//wsAAQAAAAAAAAD//wwAAQAAAAAAAAD//w0AAQAAAAAAAAD//w4AAQAAAAAAAAD//w8AAQAAAAAAAAD//xAAAQAAAAAAAAD//xEAAQAAAAAAAAD//xIAAQAAAAAAAAD//xMAAQAAAAAAAAD//xQAAQAAAAAAAAD//xUAAQAAAAAAAAD//xYAAQAAAAAAAAD//xcAAQAAAAAAAAD//xgAAQAAAAAAAAD//xkAAQAAAAAAAAD//xoAAQAAAAAAAAD//xsAAQAAAAAAAAD//xwAAQAAAAAAAAD//x0AAQAAAAAAAAD//x4AAQAAAAAAAAD//x8AAQAAAAAAAAAgAAAAAQAAAAAAAAAgAAEAAQAAAAAAAAAgAAIAAQAAAAAAAAAgAAMAAQAAAAAAAAAgAAQAAQAAAAAAAAAgAAUAAQAAAAAAAAAgAAYAAQAAAAAAAAAgAAcAAQAAAAAAAAAgAAgAAQAAAAAAAAAgAAkAAQAAAAAAAAAgAAoAAQAAAAAAAAAgAAsAAQAAAAAAAAAgAAwAAQAAAAAAAAAgAA0AAQAAAAAAAAAgAA4AAQAAAAAAAAAgAA8AAQAAAAAAAAAgABAAAQAAAAAAAAAgABEAAQAAAAAAAAAgABIAAQAAAAAAAAAgABMAAQAAAAAAAAAgABQAAQAAAAAAAAAgABUAAQAAAAAAAAAgABYAAQAAAAAAAAAgABcAAQAAAAAAAAAgABgAAQAAAAAAAAAgABkAAQAAAAAAAAAgABoAAQAAAAAAAAAgABsAAQAAAAAAAAAgABwAAQAAAAAAAAAgAB0AAQAAAAAAAAAgAB4AAQAAAAAAAAAgAB8AAQAAAAAAAAAfACAAAQAAAAAAAAAgACAAAQAAAAAAAAAAACAAAQAAAAAAAAD//yAAAQAAAAAAAAA=")
tile_set = SubResource("TileSet_2piht")

[node name="BrickPath" type="Path2D" parent="." unique_id=1332527507]
curve = SubResource("Curve2D_2piht")

[node name="BrickSpawnLocation" type="PathFollow2D" parent="BrickPath" unique_id=574688745]
position = Vector2(-64, -64)

[node name="BrickTimer" type="Timer" parent="." unique_id=2092556994]
wait_time = 0.5
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1754846273]
libraries/ = SubResource("AnimationLibrary_kd0vy")
autoplay = &"Start"

[connection signal="timeout" from="BrickTimer" to="." method="_on_brick_timer_timeout"]
